fixing footer overflow

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
   width: 100vw;
 }
 
 h2 {
-  margin-bottom: 5px;
+  margin-bottom: 0;
 }
 
 #intro, #brand-section, #animation-section, #webpage-section, #contact-section {
@@ -17,9 +16,13 @@ h2 {
 
 .title-underline {
   height: 3px;
-  width: 200px;
+  width: 100%;
   background: black;
   margin-bottom: 30px;
+}
+
+.title-with-underline {
+  display: inline-block;
 }
 
 #brand-preview-container {
@@ -224,6 +227,7 @@ form {
   gap: 20px;
   flex-direction: column;
   width: 400px;
+  max-width: 90vw;
 }
 
 label {
@@ -244,6 +248,10 @@ textarea {
   border: 1px solid black;
 }
 
+#boba-textarea {
+ height: 60px;
+}
+
 #submit {
   height: 30px;
   width: 80px;
@@ -262,11 +270,9 @@ textarea {
 }
 
 footer {
-  height: auto;
-  width: 100%;
   background: black;
   color: white;
-  padding: 5vw;
+  padding: 25px 5vw;
   margin-top: 30px;
 }
 
